syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "BookService.Protos";

package books;


service Books {
	rpc GetBook(GetBookRequest) returns (GetBookResponse) 
	{
		option (google.api.http) = {
			get: "/v1/books/{id}"
		};
	}

	rpc GetBooks(GetBooksRequest) returns (GetBooksResponse)
	{
		option (google.api.http) = {
			get: "/v1/books"
		};
	}

	rpc AddBook(AddBookRequest) returns (GetBookResponse)
	{
		option (google.api.http) = {
			post: "/v1/books",
			body: "*"
		};
	}

	rpc UpdateBook(UpdateBookRequest) returns (GetBookResponse)
	{
		option (google.api.http) = {
			patch: "/v1/books",
			body: "*"
		};
	}

	rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse)
	{
		option (google.api.http) = {
			delete: "/v1/books/{id}"
		};
	}
}


message GetBookRequest {
	int32 id = 1;
}

message GetBookResponse {
	int32 id = 1;
	string title = 2;
	string author = 3;
}

message GetBooksRequest {}

message GetBooksResponse {
	repeated GetBookResponse books = 1;
}

message AddBookRequest {
	string title = 2;
	string author = 3;
}

message UpdateBookRequest {
	int32 id = 1;
	string title = 2;
	string author = 3;
}

message DeleteBookRequest {
	int32 id = 1;
}

message DeleteBookResponse {
	bool is_deleted = 1;
}